Todo:
- Make decision:
  - Create a mechanism to set up Open/SaveDialog for each file type.
    OR
  - Create multiple Open/SaveDialogs for each type and show appropiate dialog when needed.
- Add export CEL to PNG.
- Ask for color fit when loading a CEL file.
- Add gradients.
- Autosave state in every 1 min.
- Configurable autosave interval.
- Add a ColorSelector to PaletteEditor.
- Rework SelectColor tool hinting to allow button hinting.
- Add dithering to gradient Inks.
- Add setup dialogs to Tools:
  - Circle (center+Radius vs. bounding box)
  - Sep. (boxed)
- Add setup dialogs to Inks:
  - L Grad (dither)
  - V Grad (dither)
  - H Grad (dither)
  - R Grad (dither, Center)
- Add Tool and Ink selector


2023.04.05
- SelectColor tool hinting fixed, now it allows showing hints from other controls.

2023.04.04
- Under the hood: MKMouse2 changes and follow ups.

2023.03.29
- UndoSystem is distilled to a base class and added ImageUndoSystem and ColorUndoSystem.
  The latter is not saved in system state yet.
- File format change in system state. This one breaks the compatibility with older
  saves. (Added Version so it won't do it in the future.)
- ColorUndoSystem is included in the system state save.
- After changing palette color with sliders it is possible to undo/redo the change.
- When leaving slider with button down, it goes back to original position.

2023.03.28
- Moving mouse over the palette in the PaletteEditor show color hint.
- When you are in the PaletteEditor, color hint only visible over the DrawArea or
  over the palette colors.
- Releasing RMB after panning no longer exits PaletteEditor.
- Added mouse panning enum, instead of numbers.
- Added Undo/Redo buttons to PaletteEditor. (Not working yet.)

2023.03.24
- Added a new, modern font for the modern look. (Drawn entirely with this program!)
- InfoBar now appears above the current panel (Controls or PaletteEditor),
  and on the top of the window when no panel is visible.