@@ -41,7 +41,7 @@ const
   TOPMENUHEIGHT=8*3;
   SUBMENULINEHEIGHT=24;
 
-  PALETTEEDITORHEIGHT=300;
+  PALETTEEDITORHEIGHT=294;
   PALETTESOCKETWIDTH=38;
   PALETTESOCKETHEIGHT=26;
   PALETTESOCKETSTOP=PALETTEEDITORHEIGHT-213;
