@@ -11,78 +11,77 @@
         <CursorPos X="25" Y="11"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMainUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="163"/>
-        <CursorPos X="18" Y="183"/>
+        <TopLine Value="130"/>
+        <CursorPos X="71" Y="139"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="14"/>
-        <TopLine Value="305"/>
-        <CursorPos Y="381"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="28"/>
+        <CursorPos X="26" Y="44"/>
+        <FoldState Value=" T3l70W4 pk6l50P1 PKR0{"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPInfoBarUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="15"/>
-        <TopLine Value="50"/>
-        <CursorPos X="14" Y="62"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="51"/>
+        <CursorPos X="18" Y="61"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPButtonUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="34"/>
         <CursorPos X="20" Y="100"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPControlsUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
-        <TopLine Value="41"/>
-        <CursorPos Y="62"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="240"/>
+        <CursorPos Y="274"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="364"/>
         <CursorPos X="66" Y="397"/>
         <UsageCount Value="202"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPImageUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="940"/>
         <CursorPos X="39" Y="956"/>
         <UsageCount Value="201"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPDrawAreaUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="13"/>
-        <TopLine Value="180"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="126"/>
         <CursorPos X="22" Y="211"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSettingsUnit.pas"/>
@@ -114,11 +113,13 @@
         <Filename Value="BDPToolsUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="127"/>
-        <CursorPos Y="163"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="1211"/>
+        <CursorPos X="3" Y="1248"/>
+        <FoldState Value=" T7DAJA21 PidkVH T3lH04B pj6jc036]94jN035]9DiT2B7 pkRjZ2N5]9DkL2R4 pielB063]a0jK056]IYjC0S4511114 Pigld0b"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPInksUnit.pas"/>
@@ -134,7 +135,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="302"/>
         <CursorPos Y="344"/>
-        <UsageCount Value="194"/>
+        <UsageCount Value="195"/>
       </Unit>
       <Unit>
         <Filename Value="BDPKeyMappingUnit.pas"/>
@@ -142,60 +143,55 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos Y="37"/>
-        <UsageCount Value="187"/>
+        <UsageCount Value="188"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSplashScreenUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="22"/>
         <CursorPos Y="51"/>
-        <UsageCount Value="170"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="171"/>
       </Unit>
       <Unit>
         <Filename Value="BDPColorSelectorUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
-        <TopLine Value="78"/>
-        <CursorPos Y="98"/>
-        <UsageCount Value="158"/>
+        <EditorIndex Value="6"/>
+        <CursorPos X="9" Y="13"/>
+        <UsageCount Value="159"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPUndoUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="356"/>
         <CursorPos Y="430"/>
-        <UsageCount Value="148"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="149"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
-        <TopLine Value="175"/>
-        <CursorPos Y="247"/>
-        <UsageCount Value="121"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="197"/>
+        <CursorPos X="53" Y="236"/>
+        <UsageCount Value="122"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSliderUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
-        <UsageCount Value="113"/>
-        <Loaded Value="True"/>
+        <EditorIndex Value="-1"/>
+        <UsageCount Value="114"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMenuUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="233"/>
         <CursorPos Y="254"/>
-        <UsageCount Value="86"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="87"/>
       </Unit>
       <Unit>
         <Filename Value="BDPModalDialogUnit.pas"/>
@@ -483,27 +479,7 @@
         <UsageCount Value="10"/>
       </Unit>
     </Units>
-    <JumpHistory HistoryIndex="17">
-      <Position>
-        <Filename Value="BDPDrawAreaUnit.pas"/>
-        <Caret Line="126" Column="91" TopLine="106"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPDrawAreaUnit.pas"/>
-        <Caret Line="131" Column="19" TopLine="115"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPDrawAreaUnit.pas"/>
-        <Caret Line="160" TopLine="131"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPDrawAreaUnit.pas"/>
-        <Caret Line="184" TopLine="162"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPSplashScreenUnit.pas"/>
-        <Caret Line="51" TopLine="22"/>
-      </Position>
+    <JumpHistory HistoryIndex="12">
       <Position>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <Caret Line="230" TopLine="219"/>
@@ -533,28 +509,28 @@
         <Caret Line="247" TopLine="226"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="26" Column="48" TopLine="4"/>
+        <Filename Value="BDPColorSelectorUnit.pas"/>
+        <Caret Line="13" Column="19"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="133" TopLine="102"/>
+        <Filename Value="BDPPaletteEditorUnit.pas"/>
+        <Caret Line="143" Column="47" TopLine="121"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="52" Column="9" TopLine="23"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="339" TopLine="305"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="53" TopLine="32"/>
+        <Filename Value="BDPPaletteEditorUnit.pas"/>
+        <Caret Line="325" TopLine="284"/>
       </Position>
       <Position>
         <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="1289" TopLine="1266"/>
+        <Caret Line="155" Column="7" TopLine="90"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1237" TopLine="1096"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="152" Column="7" TopLine="135"/>
       </Position>
     </JumpHistory>
     <RunParams>
